--- a/hd-dbscan/src/main/resources/application.properties
+++ b/hd-dbscan/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=hd-dbscan
+
+page-component.file.dir=C:/tmp/hd-dbscan/
+
+# log level config
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hddbscan=DEBUG
