--- a/hd-dbscan/src/main/resources/application.properties
+++ b/hd-dbscan/src/main/resources/application.properties
@@ -2,6 +2,30 @@ spring.application.name=hd-dbscan
 
 page-component.file.dir=C:/tmp/hd-dbscan/
 
+spring.datasource.url=jdbc:mariadb://localhost:3306/hddbscan
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.username=hddbscan
+spring.datasource.password=hddbscan
+spring.datasource.hikari.minimum-idle=30
+spring.datasource.hikari.maximum-pool-size=100
+
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=embedded
+spring.sql.init.mode=always
+
+# DDL mode.
+# This is actually a shortcut for the "hibernate.hbm2ddl.auto" property.
+# Defaults to "create-drop" when using an embedded database and no schema manager was detected.
+# Otherwise, defaults to "none".
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.current_session_context_class=thread
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.flush_mode=ALWAYS
+
+# Whether to enable logging of SQL statements.
+spring.jpa.show-sql=true
+
 # log level config
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
