--- a/hd-dbscan/src/main/resources/application.properties
+++ b/hd-dbscan/src/main/resources/application.properties
@@ -29,4 +29,6 @@ spring.jpa.show-sql=true
 # log level config
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.hddbscan=DEBUG
+
