--- a/hd-dbscan-ext/package.json
+++ b/hd-dbscan-ext/package.json
@@ -20,10 +20,14 @@
   "description": "",
   "devDependencies": {
     "@types/chrome": "^0.1.33",
+    "@types/jquery": "^3.5.33",
     "copy-webpack-plugin": "^13.0.1",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
     "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "jquery": "^4.0.0"
   }
 }
