--- a/hd-dbscan-ext/packages/inspector/package.json
+++ b/hd-dbscan-ext/packages/inspector/package.json
@@ -13,6 +13,7 @@
         "@codemirror/language": "^6.8.0",
         "@codemirror/state": "^6.5.2",
         "@codemirror/theme-one-dark": "^6.1.3",
-        "@codemirror/view": "^6.38.1"
+        "@codemirror/view": "^6.38.1",
+        "jquery": "^4.0.0"
     }
 }
