--- a/hd-dbscan-ext/manifest.json
+++ b/hd-dbscan-ext/manifest.json
@@ -11,7 +11,8 @@
         "storage",
         "webNavigation",
         "cookies",
-        "downloads"
+        "downloads",
+        "debugger"
     ],
     "host_permissions": [
         "<all_urls>"
